kubernetes/qbittorrent/prod-d1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: qbittorrent
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
      containers:
        - name:  qbittorrent
          image:  lscr.io/linuxserver/qbittorrent:latest
          ports:
          - containerPort:  6881
            name: torrents
          - containerPort: 8080
            name:  qbittorrent-web
          volumeMounts:
          - name: qbittorrent-config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
      volumes:
        - name: downloads
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/temp2/
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-pvc
